--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,4 +51,8 @@ dependencies {
     implementation("androidx.navigation:navigation-fragment-ktx:$nav_version")
     implementation("androidx.navigation:navigation-ui-ktx:$nav_version")
 
+
+    // Safaricom Daraja API for initiating STK push
+    implementation 'com.androidstudy:daraja:1.0.2'
+
 }
